[metadata]
name = SemanticClusterer
version = 0.0.1
author = James M. Tucker, Ph.D.
license = MIT
author_email = james_tucker@icloud.com
description = A package for clustering text data using semantic embeddings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JamesMTucker/SemanticClusterer
keywords = clustering, text, semantic, embeddings
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src

python_requires = >=3.9
install_requires =

[options.packages.find]
where = src
exclude = tests

[options.entry_points]
console_scripts =
    sclusterer = src.cli:main
